Updating to Java 11. Closes #82